--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vanilla JS JSON Builder</title>
+    <title>JSON Builder</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons (Vanilla Version) -->
     <script src="https://unpkg.com/lucide@latest"></script>
