--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSON Builder</title>
+    
+    <link rel="manifest" href="assets/images/site.webmanifest">
+    <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="assets/images/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="assets/images/android-chrome-512x512.png" sizes="512x512">
+    <link rel="icon" type="image/png" href="assets/images/apple-touch-icon.png" sizes="180x180">
+
+
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons (Vanilla Version) -->
     <script src="https://unpkg.com/lucide@latest"></script>
